--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ header {
     justify-content: center;
     height: 300px;
     margin-top: 75px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 .header-container {
     /* justify-self: center; */
@@ -177,6 +177,16 @@ h1 {
 }
 
 
+
+.nav-line {
+    height: 2px;
+    width: 90%;
+    align-self: center;
+    background-color: #00000030;
+    margin-top: 25px;
+    /* margin-left: 20px; */
+    /* margin-right: 20px; */
+}
 #nav-container-mobile {
     background-color: #ECECEC;
     outline: #00000030 2px solid;
@@ -196,11 +206,11 @@ h1 {
     /* justify-content: center; */
 }
 #nav-container-mobile.open {
-    height: 325px;
-    width: 250px;
+    height: 340px;
+    width: calc(100vw - 40px);
     /* width: calc(100vw - 60px); */
     /* width: calc(25vw + 50px); */
-    transition: .3s;
+    transition: .4s;
     padding: 10px;
 }
 .nav-toggles {
@@ -214,7 +224,7 @@ h1 {
     justify-content: center;
     align-items: center;
 
-    align-self: flex-end;
+    align-self: center;
     z-index: 10;
 
     position: absolute;
@@ -232,6 +242,8 @@ h1 {
     font-size: 32pt;
 
     align-self: center;
+    padding-left: 0;
+    margin-top: 20px;
     /* margin-left: 28.38px; */
 }
 #nav-buttons.open {
@@ -242,29 +254,28 @@ h1 {
     list-style-type: none;
     padding: 0;
     font-family: "Josefin Sans";
-    text-align: center;
+    /* text-align: left; */
     /* margin: 0; */
-    margin-top: 60px;
+    margin-top: 30px;
 }
 #nav-buttons li {
     padding: 0;
-    margin: 10px;
+    margin: 20px 0;
+    /* text-align: center; */
+    /* color: #ECECEC; */
     text-align: center;
-    color: #ECECEC;
 }
 #nav-buttons li:hover {
     cursor: pointer;
 }
-
-#nav-buttons ul li{
-    margin: 20px;
-    text-align: center;
-}
 #nav-buttons ul a {
     color: #2D2D36;
 }
-
-
+.current-page-nav {
+    color: red;
+    font-weight: bold;
+    font-size: 16pt;
+}
 
 
 
@@ -509,14 +520,14 @@ footer img:hover {
     border-radius: 30px;
     border: #00000030 2px solid;
 }
-/* .swiper-slide {
+.swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
-} */
+}
 
 .swiper-slide img {
     display: block;
@@ -596,7 +607,6 @@ footer img:hover {
     margin-bottom: 40px;
 }
 #portrait {
-    /* max-width: 100px; */
     height: 150px;
     width: 150px;
     border-radius: 50%;
