--- a/styles.css
+++ b/styles.css
@@ -536,7 +536,12 @@ footer img:hover {
     height: 100%;
     object-fit: cover;
 }
-
+.swiper-button-next, .swiper-button-prev {
+    background-color: #00000040;
+    padding: 30px 20px;
+    border-radius: 30px;
+    color: #ECECEC !important;
+}
 
 .projects {
     display: flex;
